<?xml version="1.0"?>
<package format="2">
  <name>robotont_laserscan_leds</name>
  <version>0.0.1</version>
  <description>Indicates with LEDs laserscan for robotont</description>

  <maintainer email="aleksandr.makarov@ut.ee">Aleksandr Makarov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotont_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>robotont_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robotont_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
